--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/nav.js" defer></script>
 </head>
 
 <body>
@@ -22,6 +23,11 @@
         <div class="logo">
           <a href="index.html">The Jewish Antwerp<br><span class="subtitle">Historical Archive</span></a>
         </div>
+        <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
         <nav class="main-nav">
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
