big update mobile

--- a/kehilles.html
+++ b/kehilles.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <link rel=" icon\ type=\image/svg+xml\ href=\favicon.svg\ />
+    <meta charset=" UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kehilles - Jewish Antwerp Historical Archive</title>
     <link
@@ -31,6 +33,7 @@
                         <li><a href="kehilles.html" class="active">Kehilles</a></li>
                         <li><a href="rabbis.html">Rabbis</a></li>
                         <li><a href="synagogues.html">Synagogues</a></li>
+                        <li><a href="contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -118,6 +121,7 @@
             </div>
         </footer>
     </div>
+    <script src="js/scroll-top.js"></script>
 </body>
 
 </html>
