--- a/rabbis.html
+++ b/rabbis.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <link rel=" icon\ type=\image/svg+xml\ href=\favicon.svg\ />
+    <meta charset=" UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabbis - Jewish Antwerp Historical Archive</title>
     <link
@@ -31,6 +33,7 @@
                         <li><a href="kehilles.html">Kehilles</a></li>
                         <li><a href="rabbis.html" class="active">Rabbis</a></li>
                         <li><a href="synagogues.html">Synagogues</a></li>
+                        <li><a href="contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -81,7 +84,8 @@
 
                     <!-- K -->
                     <article class="card">
-                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                        <a href="rabbi-chaim-kreiswirth.html"
+                            style="display: block; text-decoration: none; color: inherit;">
                             <div class="card-image" style="height: 200px;">
                                 <img src="images/rabbi-chaim-kreiswirth.jpg" alt="Rabbi Chaim Kreiswirth">
                             </div>
@@ -162,6 +166,19 @@
                         </a>
                     </article>
 
+                    <article class="card">
+                        <a href="#" style="display: block; text-decoration: none; color: inherit;">
+                            <div class="card-image" style="height: 200px;">
+                                <img src="images/dayan-schmal.jpg" alt="Dayan Schmal">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title" style="font-size: 1.2rem;">Dayan Schmal</h3>
+                                <div class="card-meta">20th Century</div>
+                                <span class="card-link">View Profile &rarr;</span>
+                            </div>
+                        </a>
+                    </article>
+
                 </div>
             </div>
         </main>
@@ -172,6 +189,7 @@
             </div>
         </footer>
     </div>
+    <script src="js/scroll-top.js"></script>
 </body>
 
 </html>
