--- a/hollandse-synagoge.html
+++ b/hollandse-synagoge.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hollandse Synagoge - Jewish Antwerp Historical Archive</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/accordion.css">
     <script src="js/nav.js" defer></script>
 </head>
 
@@ -30,7 +32,8 @@
                         <li><a href="history.html">History</a></li>
                         <li><a href="kehilles.html">Kehilles</a></li>
                         <li><a href="rabbis.html">Rabbis</a></li>
-                        <li><a href="synagogues.html">Synagogues</a></li>
+                        <li><a href="synagogues.html" class="active">Synagogues</a></li>
+                        <li><a href="contribute.html">Contribute</a></li>
                     </ul>
                 </nav>
             </div>
@@ -117,6 +120,8 @@
         </footer>
     </div>
     <script src="js/lightbox.js"></script>
+    <script src="js/scroll-top.js"></script>
+    <script src="js/accordion.js"></script>
 </body>
 
 </html>
