--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jewish Antwerp Historical Archive</title>
   <!-- Google Fonts -->
@@ -35,6 +35,7 @@
             <li><a href="kehilles.html">Kehilles</a></li>
             <li><a href="rabbis.html">Rabbis</a></li>
             <li><a href="synagogues.html">Synagogues</a></li>
+            <li><a href="contribute.html">Contribute</a></li>
           </ul>
         </nav>
       </div>
@@ -42,13 +43,31 @@
 
     <main id="main-content">
       <!-- Dynamic Content will be injected here -->
-      <section class="hero"
-        style="background-image: url('images/home-hero.jpg'); background-size: cover; background-position: center;">
+      <section class="hero">
         <div class="hero-overlay"></div>
         <div class="hero-content">
           <h1>Preserving the Legacy</h1>
           <p class="hebrew-text">שימור המורשת</p>
           <p class="intro-text">Exploring the rich history, architecture, and lives of Jewish Antwerp.</p>
+        </div>
+      </section>
+
+      <!-- Second Hero Image (Now Hero 3) -->
+      <section class="image-section" style="background-image: url('images/hero-3.jpg');">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+          <h2 style="color: var(--color-gold); font-size: 2.5rem; margin-bottom: 1rem;">Community Life</h2>
+          <p style="font-size: 1.2rem; color: var(--color-text-main);">Vibrant traditions in the heart of the city.</p>
+        </div>
+      </section>
+
+      <!-- Third Hero Image (Now Hero 2) -->
+      <section class="image-section" style="background-image: url('images/hero-2.jpg');">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+          <h2 style="color: var(--color-gold); font-size: 2.5rem; margin-bottom: 1rem;">Historic District</h2>
+          <p style="font-size: 1.2rem; color: var(--color-text-main);">A center of commerce and culture for centuries.
+          </p>
         </div>
       </section>
     </main>
@@ -59,6 +78,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/scroll-top.js"></script>
 </body>
 
 </html>
