--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
           <h2 style="color: var(--color-gold); font-size: 2.5rem; margin-bottom: 1rem;">Community Life</h2>
-          <p style="font-size: 1.2rem; color: var(--color-text-main);">Vibrant traditions in the heart of the city.</p>
+          <p style="font-size: 1.2rem; color: var(--color-text-main);">The last real shtetl in western Europe, Antwerp
+            is known for its Orthodox Jews and its diamonds industry.</p>
         </div>
       </section>
 
@@ -66,8 +67,11 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
           <h2 style="color: var(--color-gold); font-size: 2.5rem; margin-bottom: 1rem;">Historic District</h2>
-          <p style="font-size: 1.2rem; color: var(--color-text-main);">A center of commerce and culture for centuries.
-          </p>
+          <p style="font-size: 1.2rem; color: var(--color-text-main);">Barely twenty years ago, approximately 80% of
+            Antwerp’s Jewish population used to make a living from the diamond industry. More than half of the world
+            production of diamonds passed through these few streets near Centraal Station. The diamond centers, which
+            can be visited, also served as meeting places where ongoing debate took place over the social, cultural, and
+            political issues affecting the Jewish community.</p>
         </div>
       </section>
     </main>
